Respect Lua mode in CLI compilation (#1227)